RESOLVED FIXED145531
[iOS] Hardware Keyboard: Command + left arrow does not work
https://bugs.webkit.org/show_bug.cgi?id=145531
Summary [iOS] Hardware Keyboard: Command + left arrow does not work
Enrica Casucci
Reported 2015-06-01 16:09:45 PDT
CMD+right works, only cmd+left is broken. rdar://problem/18576402
Attachments
Patch (1.39 KB, patch)
2015-06-01 16:55 PDT, Enrica Casucci
andersca: review+
Enrica Casucci
Comment 1 2015-06-01 16:55:16 PDT
Enrica Casucci
Comment 2 2015-06-01 16:58:10 PDT
Committed revision 185088.
Note You need to log in before you can comment on or make changes to this bug.