[iOS] Hardware Keyboard: Command + left arrow does not work. https://bugs.webkit.org/show_bug.cgi?id=145531 rdar://problem/18576402

Reviewed by Anders Carlsson.

We were calling a non existent command (moveToStartOfLine) instead of
moveToBeginningOfLine.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _moveToStartOfLine:withHistory:]):



Canonical link: https://commits.webkit.org/163573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185088 268f45cc-cd09-0410-ab3c-d52691b4dbfc